Builders on main page, improve support page.

--- a/support.html
+++ b/support.html
@@ -14,34 +14,29 @@ layout: base
 
 <h2>Commercial support and training</h2>
 
-<p><a href="http://9elements.com/">9elements</a> — Berlin/Bochum, Germany</p>
+<a href="http://9elements.com"><img src="https://0.gravatar.com/avatar/95d7753cc2b0462392724ce58c6fcdea?d=https%3A%2F%2Fidenticons.github.com%2F3b4620fb9b9a1cc0ed457fb831347b11.png&s=48" width="48" height="48" alt="9elements" /></a>
 
-<p>One of the creators of Chaplin, is offering commercial support and training for Chaplin and Backbone-based JavaScript applications. 9elements is a software and design agency located in Berlin and Bochum, Germany. Send us a mail for more information: <a href="mailto:contact@9elements.com">contact@9elements.com</a>.</p>
+<span class="author-avatar-text"><a href="http://9elements.com/">9elements</a> — Berlin/Bochum, Germany</span>
 
-<p><a href="http://paulmillr.com/">Paul Miller</a> — Worldwide</p>
+<p>
+One of the creators of Chaplin, is offering commercial support and training for Chaplin and Backbone-based JavaScript applications. 9elements is a software and design agency located in Berlin and Bochum, Germany. Send us a mail for more information: <a href="mailto:contact@9elements.com">contact@9elements.com</a>.</p>
 
-<p>Chaplin &amp; Brunch maintainer is offering consulting &amp; training for all Backbone-related stuff. Contact him: <a href="mailto:&#112;&#97;&#117;&#108;&#43;&#99;&#111;&#110;&#115;&#117;&#108;&#116;&#105;&#110;&#103;&#64;&#112;&#97;&#117;&#108;&#109;&#105;&#108;&#108;&#114;&#46;&#99;&#111;&#109;">&#112;&#97;&#117;&#108;&#43;&#99;&#111;&#110;&#115;&#117;&#108;&#116;&#105;&#110;&#103;&#64;&#112;&#97;&#117;&#108;&#109;&#105;&#108;&#108;&#114;&#46;&#99;&#111;&#109;</a>.</p>
+<a href="http://paulmillr.com/" rel="author"><img src="https://secure.gravatar.com/avatar/d342e4ef045c54a6a6f41d070d8a0406?s=48" width="48" height="48" alt="Paul Miller"></a>
 
-<p><a href="http://www.concordusapps.com/">Concordus Applications</a> — Sacramento, CA, USA</p>
+<span class="author-avatar-text"><a href="http://paulmillr.com/" rel="author"><span class="name">Paul</span> Miller</a> — Worldwide</span>
+
+<p>
+
+Chaplin &amp; Brunch maintainer is offering consulting &amp; training for all Backbone-related stuff. Contact him: <a href="mailto:&#112;&#97;&#117;&#108;&#43;&#99;&#111;&#110;&#115;&#117;&#108;&#116;&#105;&#110;&#103;&#64;&#112;&#97;&#117;&#108;&#109;&#105;&#108;&#108;&#114;&#46;&#99;&#111;&#109;">&#112;&#97;&#117;&#108;&#43;&#99;&#111;&#110;&#115;&#117;&#108;&#116;&#105;&#110;&#103;&#64;&#112;&#97;&#117;&#108;&#109;&#105;&#108;&#108;&#114;&#46;&#99;&#111;&#109;</a>.</p>
+
+<a href="http://www.concordusapps.com/"><img src="https://1.gravatar.com/avatar/fffbb89d88b7b257508ac596b7be3c23?s=48" width="48" height="48" alt="Concordus apps"></a>
+
+<span class="author-avatar-text"><a href="http://www.concordusapps.com/">Concordus Applications</a> — Sacramento, CA, USA</span>
 
 <p>Offering commerical support and training for Chaplin and Backbone-based JavaScript applications. Concordus Applications is an enterprise integration and software development firm. Email us for more information: <a href="mailto:support@concordusapps.com">support@concordusapps.com</a>.</p>
 
-<p><a href="http://les-tilleuls.coop">La Coopérative des Tilleuls</a> - Lille, France</p>
+<a href="http://www.concordusapps.com/"><img src="https://1.gravatar.com/avatar/d952fabd2b9a2b7a6fd7f60d0ee66f24?s=96" width="48" height="48" alt="La Coopérative des Tilleuls"></a>
+
+<span class="author-avatar-text"><a href="http://les-tilleuls.coop">La Coopérative des Tilleuls</a> - Lille, France</span>
 
 <p>Offering commercial support and training for Chaplin and Backbone-based JavaScript applications. La Coopérative des Tilleuls is a software, training and web-design cooperative enterprise located in Lille, France. Send us a mail for more information: <a href="mailto:contact@les-tilleuls.coop">contact@les-tilleuls.coop</a>.</p>
-
-<h2>Brought to you by</h2>
-
-<p class="builders">
-  <a href="http://molily.de/" rel="author"><img src="https://secure.gravatar.com/avatar/ae86e2cc402e0dceb88e7d4fc10cbc85" width="48" height="48" alt="Mathias Schäfer">
-   <span class="name">Mathias</span> Schäfer</a>
-
-  <a href="http://paulmillr.com/" rel="author"><img src="https://secure.gravatar.com/avatar/d342e4ef045c54a6a6f41d070d8a0406" width="48" height="48" alt="Paul Miller">
-   <span class="name">Paul</span> Miller</a>
-
-  <a href="https://github.com/mehcode" rel="author"><img src="https://secure.gravatar.com/avatar/23e170cf3bbbb2a392a96df75858b332" width="48" height="48" alt="Ryan Leckey">
-   <span class="name">Ryan</span> Leckey</a>
-
-  <a href="https://github.com/chaplinjs/chaplin/graphs/contributors">and others</a>
-</p>
-</section>
