--- a/index.html
+++ b/index.html
@@ -85,6 +85,21 @@ Chaplin is an architecture for JavaScript applications using the <a href="http:/
 <p>If you’ll be using Chaplin with AMD, you will also need an AMD module loader like <a href="http://requirejs.org/">RequireJS</a>, <a href="https://github.com/jrburke/almond">Almond</a> or <a href="https://github.com/cujojs/curl">curl</a> to load Chaplin and lazy-module application modules.
 </p>
 
+<h2>Brought to you by</h2>
+
+<p class="builders">
+  <a href="http://molily.de/" rel="author"><img src="https://secure.gravatar.com/avatar/ae86e2cc402e0dceb88e7d4fc10cbc85" width="48" height="48" alt="Mathias Schäfer">
+   <span class="name">Mathias</span> Schäfer</a>
+
+  <a href="http://paulmillr.com/" rel="author"><img src="https://secure.gravatar.com/avatar/d342e4ef045c54a6a6f41d070d8a0406" width="48" height="48" alt="Paul Miller">
+   <span class="name">Paul</span> Miller</a>
+
+  <a href="https://github.com/mehcode" rel="author"><img src="https://secure.gravatar.com/avatar/23e170cf3bbbb2a392a96df75858b332" width="48" height="48" alt="Ryan Leckey">
+   <span class="name">Ryan</span> Leckey</a>
+
+  <a href="https://github.com/chaplinjs/chaplin/graphs/contributors">and others</a>
+</p>
+
 <!--
 
 <h2>Getting started</h2>
