--- a/examples.html
+++ b/examples.html
@@ -9,7 +9,7 @@ layout: base
 </p>
 
 <h2>Ost.io</h2>
-<p><a href="http://ost.io/">Ost.io</a> is an open-source forum for GitHub projects (<a href="https://github.com/paulmillr/ostio">code</a>). It uses <a href="https://github.com/paulmillr/brunch-with-chaplin">Chaplin</a> as an application skeleton and Rails for the backend.</p>
+<p><a href="http://ost.io/">Ost.io</a> is an open-source forum for GitHub projects (<a href="https://github.com/paulmillr/ostio">code</a>). It uses <a href="https://github.com/paulmillr/brunch-with-chaplin">Brunch with Chaplin</a> as an application skeleton and Rails for the backend.</p>
 
 <p>
   <a href="http://ost.io/">
