Why chaplin draft.

--- a/index.html
+++ b/index.html
@@ -85,6 +85,18 @@ Chaplin is an architecture for JavaScript applications using the <a href="http:/
 <p>If you’ll be using Chaplin with AMD, you will also need an AMD module loader like <a href="http://requirejs.org/">RequireJS</a>, <a href="https://github.com/jrburke/almond">Almond</a> or <a href="https://github.com/cujojs/curl">curl</a> to load Chaplin and lazy-module application modules.
 </p>
 
+<!--
+Why Chaplin
+
+<p>
+  With Backbone, Underscore and jQuery included, Chaplin stack is just <strong>49.5K</strong> gzipped. Ember* js >60K, Angular* core is >120K.
+</p>
+
+<p>When Ember and Angular require you to learn the whole new software stack, if you're new to MVC and coming from JS, you may likely already know jQuery or underscore.js. So, you need much less to learn!</p>
+
+* Ember.js 1.0.0, Angular.js 1.0.7
+-->
+
 <h2>Brought to you by</h2>
 
 <p class="builders">
