Fix todos screen

--- a/examples.html
+++ b/examples.html
@@ -28,7 +28,7 @@ layout: base
 
 <p class="example-screenshot">
   <a href="http://todomvc.com/labs/dependency-examples/chaplin-brunch/public/">
-    <img src="http://todomvc.com/site/img/screenshot.png" alt="TodoMVC">
+    <img src="http://todomvc.com/site-assets/screenshot.png" alt="TodoMVC">
   </a>
 </p>
 
