Improve examples page.

--- a/examples.html
+++ b/examples.html
@@ -1,5 +1,12 @@
 ---
 layout: base
+
+examples:
+  ostio:
+    name: 'Ost.io'
+    link: 'http://ost.io/'
+    description: '[Ost.io](http://ost.io/) is an open-source forum for GitHub projects ([code](https://github.com/paulmillr/ostio)). It uses [Brunch with Chaplin](https://github.com/paulmillr/brunch-with-chaplin) as an application skeleton and Rails for the backend.'
+    screenshot: 'images/screenshots/ostio-07-2013.png'
 ---
 
 <h1>Examples</h1>
@@ -7,6 +14,8 @@ layout: base
 <p>
   To give you an idea of how client-side applications are built using Chaplin, here are some projects and example applications whose source is freely accessible.
 </p>
+
+<p>Add more apps and examples <a href="https://github.com/chaplinjs/chaplinjs.github.com/blob/master/examples.html">on GitHub</a>.</p>
 
 <h2>Ost.io</h2>
 <p><a href="http://ost.io/">Ost.io</a> is an open-source forum for GitHub projects (<a href="https://github.com/paulmillr/ostio">code</a>). It uses <a href="https://github.com/paulmillr/brunch-with-chaplin">Brunch with Chaplin</a> as an application skeleton and Rails for the backend.</p>
@@ -41,6 +50,9 @@ layout: base
 <h2>Tweet your Brunch</h2>
 <p><a href="https://github.com/brunch/twitter">github.com/brunch/twitter</a> is a simple twitter client. It uses Twitter client-side authentication to display the user’s feed and create new tweets.</p>
 
+<h2>Symfony demo</h2>
+<p><a href="https://github.com/pulse00/symfony-chaplin-demo">The app</a> is used as a demo for the <a href="https://github.com/symfony/symfony">Symfony</a> <a href="http://www.meetup.com/sfugvienna/">usergroup vienna</a> to demonstrate a single page app using Symfony as a REST backend and chaplin as the html5 frontend.</p>
+
 <h1>In Production</h1>
 
 <p>
@@ -53,6 +65,16 @@ layout: base
 <p>
   <a href="https://delicious.com">
     <img src="images/screenshots/delicious-07-2013.png" alt="Delicious">
+  </a>
+</p>
+
+
+<h2>Moviepilot</h2>
+<p><a href="http://moviepilot.com/">Moviepilot</a> is a home for upcoming movies, where you can discover and read about the movies that interest and excite you. It was the original Chaplin app.</p>
+
+<p>
+  <a href="http://moviepilot.com/">
+    <img src="images/screenshots/moviepilot-07-2013.png" alt="Moviepilot">
   </a>
 </p>
 
@@ -74,11 +96,12 @@ layout: base
   </a>
 </p>
 
-<h2>Moviepilot</h2>
-<p><a href="http://moviepilot.com/">Moviepilot</a> is a home for upcoming movies, where you can discover and read about the movies that interest and excite you.</p>
+<h2>Dogkr</h2>
+
+<p><a href="http://www.dogkr.com">Dogkr</a> is an online logger to record all your beloved dogs’ life moments, even tiny instants became timeless memories.</p>
 
 <p>
   <a href="http://moviepilot.com/">
-    <img src="images/screenshots/moviepilot-07-2013.png" alt="Moviepilot">
+    <img src="http://cdn.dogkr.com/static/images/home_shot.jpg" alt="Dogkr" />
   </a>
 </p>
