Small license font.

--- a/index.html
+++ b/index.html
@@ -121,6 +121,5 @@ Why Chaplin
 -->
 
 <footer>
-  <p><small>Hosted on <a href="https://github.com/chaplinjs/chaplinjs.github.com">GitHub Pages</a></small></p>
-  <p><small>The content on this website is licensed under a <a rel="license" href="http://creativecommons.org/licenses/by/3.0/deed.en_US">CC BY 3.0</a>.</small></p>
+  <p><small>Hosted on <a href="https://github.com/chaplinjs/chaplinjs.github.com">GitHub Pages</a>. The content on this website is licensed under a <a rel="license" href="http://creativecommons.org/licenses/by/3.0/deed.en_US">CC BY 3.0</a>.</small></p>
 </footer>
