Add basic example.

--- a/index.html
+++ b/index.html
@@ -84,6 +84,31 @@ Chaplin is an architecture for JavaScript applications using the <a href="http:/
   </div>
 </div>
 
+<h2>Well-structured</h2>
+
+<p>Making REST web apps is extemely easy with Chaplin.</p>
+
+<p>Here’s example app. When you click on app link, it tries to load GitHub user data and display it. It was separated to 11 files so that you can see each chunk separately. Each file is a module and loaded from other file <a href="http://brunch.io">(with Brunch)</a>. </p>
+
+<a href="http://chaplinjs.org/basic-example/public/">(non-iframe link)</a>, <a href="https://github.com/chaplinjs/basic-example/">(GitHub repo)</a>
+<iframe class="basic-example" src="http://chaplinjs.org/basic-example/public/index.html" seamless></iframe>
+
+<ul class="tabs">
+  <li>initialize</li>
+  <li>routes</li>
+  <li>controllers/users-controller</li>
+  <li>models/user</li>
+  <li>views/base/view</li>
+  <li>views/site-view</li>
+  <li>views/templates/site</li>
+  <li>views/random-users-view</li>
+  <li>views/templates/random-users</li>
+  <li>views/user-view</li>
+  <li>views/templates/user</li>
+</ul>
+
+<script src="https://gist.github.com/paulmillr/6699567.js"></script>
+
 <h2>Features</h2>
 
 <ul>
