--- a/support.html
+++ b/support.html
@@ -25,9 +25,7 @@ One of the creators of Chaplin, is offering commercial support and training for 
 
 <span class="author-avatar-text"><a href="http://paulmillr.com/" rel="author"><span class="name">Paul</span> Miller</a> — Worldwide</span>
 
-<p>
-
-Chaplin &amp; Brunch maintainer is offering consulting &amp; training for all Backbone-related stuff. Contact him: <a href="mailto:&#112;&#97;&#117;&#108;&#43;&#99;&#111;&#110;&#115;&#117;&#108;&#116;&#105;&#110;&#103;&#64;&#112;&#97;&#117;&#108;&#109;&#105;&#108;&#108;&#114;&#46;&#99;&#111;&#109;">&#112;&#97;&#117;&#108;&#43;&#99;&#111;&#110;&#115;&#117;&#108;&#116;&#105;&#110;&#103;&#64;&#112;&#97;&#117;&#108;&#109;&#105;&#108;&#108;&#114;&#46;&#99;&#111;&#109;</a>.</p>
+<p>Chaplin &amp; Brunch maintainer is offering <a href="http://paulmillr.com/hire.html">consulting &amp; training</a> for all Backbone-related stuff. Contact him: <a href="mailto:&#112;&#97;&#117;&#108;&#43;&#99;&#111;&#110;&#115;&#117;&#108;&#116;&#105;&#110;&#103;&#64;&#112;&#97;&#117;&#108;&#109;&#105;&#108;&#108;&#114;&#46;&#99;&#111;&#109;">&#112;&#97;&#117;&#108;&#43;&#99;&#111;&#110;&#115;&#117;&#108;&#116;&#105;&#110;&#103;&#64;&#112;&#97;&#117;&#108;&#109;&#105;&#108;&#108;&#114;&#46;&#99;&#111;&#109;</a>.</p>
 
 <a href="http://www.concordusapps.com/"><img src="https://1.gravatar.com/avatar/fffbb89d88b7b257508ac596b7be3c23?s=48" width="48" height="48" alt="Concordus apps"></a>
 
