--- a/index.html
+++ b/index.html
@@ -134,7 +134,7 @@ Chaplin is an architecture for JavaScript applications using the <a href="http:/
 
 <p>If you're using Chaplin with <a href="http://documentcloud.github.com/backbone/">Backbone</a>, you will need <a href="http://lodash.com/">lodash</a> / <a href="http://documentcloud.github.com/underscore/">Underscore</a> and <a href="http://jquery.com/">jQuery</a> / <a href="http://zeptojs.com">Zepto</a>.</p>
 
-<p>There is another option — you can use <a href="http://exosjs.com">Exoskeleton</a>. Exoskeleton is a faster and leaner Backbone for your HTML5 apps. It allows you to totally drop these dependencies. Just include Exoskeleton with Chaplin and you're done.</p>
+<p><strong>There is another option:</strong> you can use <a href="http://exosjs.com">Exoskeleton</a>. Exoskeleton is a faster and leaner Backbone for your HTML5 apps. It allows you to totally drop these dependencies. Just include Exoskeleton with Chaplin and you're done.</p>
 
 <p>If you’ll be using Chaplin with AMD, you will also need an AMD module loader like <a href="http://requirejs.org/">RequireJS</a>, <a href="https://github.com/jrburke/almond">Almond</a> or <a href="https://github.com/cujojs/curl">curl</a> to load Chaplin and lazy-module application modules.
 </p>
