--- a/index.html
+++ b/index.html
@@ -71,7 +71,7 @@ Chaplin is an architecture for JavaScript applications using the <a href="http:/
       With <strong>Backbone</strong>, <strong>Underscore</strong> and <strong>jQuery</strong> included, Chaplin stack is just <strong>52K</strong> gzipped, while stuff like <a href="http://emberjs.com">Ember</a> is <strong>over 60K</strong>.
     </p>
 
-    <p>When Ember and Angular require you to learn the whole new software stack, if you're new to MVC and coming from JS, you may  already know jQuery or underscore. So, you need less to learn!</p>
+    <p>When Ember and Angular require you to learn the whole new software stack, if you're new to MVC and coming from JS, you may  already know jQuery or underscore. So, you need less to learn.</p>
 
     <p>And now you can use <a href="http://exosjs.com/">Exoskeleton</a> as a Backbone drop-in replacement and your stack size will be just <strong>20K</strong>!</p>
   </div>
