--- a/index.html
+++ b/index.html
@@ -56,7 +56,7 @@ Chaplin is an architecture for JavaScript applications using the <a href="http:/
   <h2>Why Chaplin</h2>
   <div class="download-block">
     <div class="dl-button dummy">More than Backbone</div>
-    <p>Backbone is very good at what it does (simple MVC library), but just library is not enough for single-page apps. For example, there is no good memory management solution in Backbone.</p>
+    <p>Backbone / Exoskeleton is very good at what it does (simple MVC library), but just library is not enough for single-page apps. For example, there is no good memory management solution in Backbone.</p>
     <p>Chaplin addresses these limitations by providing a lightweight but flexible structure which leverages well-proven design patterns and best practises.</p>
   </div>
 
@@ -67,13 +67,11 @@ Chaplin is an architecture for JavaScript applications using the <a href="http:/
 
   <div class="download-block first">
     <div class="dl-button dummy">Less to learn</div>
+    <p>Using <a href="http://exosjs.com/">Exoskeleton</a> as a Backbone drop-in replacement and your stack size will be just <strong>20K</strong>, while stuff like <a href="http://emberjs.com">Ember</a> is <strong>over 60K</strong></p>
+
     <p>
-      With <strong>Backbone</strong>, <strong>Underscore</strong> and <strong>jQuery</strong> included, Chaplin stack is just <strong>52K</strong> gzipped, while stuff like <a href="http://emberjs.com">Ember</a> is <strong>over 60K</strong>.
+      Even if you add <strong>Underscore</strong> and <strong>jQuery</strong> to this stack, overall size will still be just <strong>52K</strong>.
     </p>
-
-    <p>When Ember and Angular require you to learn the whole new software stack, if you're new to MVC and coming from JS, you may  already know jQuery or underscore. So, you need less to learn.</p>
-
-    <p>And now you can use <a href="http://exosjs.com/">Exoskeleton</a> as a Backbone drop-in replacement and your stack size will be just <strong>20K</strong>!</p>
   </div>
 
   <div class="download-block">
@@ -132,7 +130,7 @@ Chaplin is an architecture for JavaScript applications using the <a href="http:/
 
 <p>Chaplin supports AMD and Common.js modules. There is no “global variables” build, so Chaplin explicitly prohibits any using without module systems.</p>
 
-<p>Latest release is 0.11.2 (<a href="https://github.com/chaplinjs/chaplin/blob/master/CHANGELOG.md">changelog</a>, <a href="http://github.com/chaplinjs/chaplin/compare/0.10.0...0.11.2">diff from 0.10.0</a>)</p>
+<p>Latest release is 0.11.3 (<a href="https://github.com/chaplinjs/chaplin/blob/master/CHANGELOG.md">changelog</a>, <a href="http://github.com/chaplinjs/chaplin/compare/0.10.0...0.11.3">diff from 0.10.0</a>)</p>
 
 <p>If you're using Chaplin with <a href="http://documentcloud.github.com/backbone/">Backbone</a>, you will need <a href="http://lodash.com/">lodash</a> / <a href="http://documentcloud.github.com/underscore/">Underscore</a> and <a href="http://jquery.com/">jQuery</a> / <a href="http://zeptojs.com">Zepto</a>.</p>
 
