--- a/index.html
+++ b/index.html
@@ -142,7 +142,8 @@ Chaplin is an architecture for JavaScript applications using the <a href="http:/
 <h2>Brought to you by</h2>
 
 <p class="builders">
-  <a href="http://molily.de/" rel="author"><img src="https://secure.gravatar.com/avatar/ae86e2cc402e0dceb88e7d4fc10cbc85" width="48" height="48" alt="Mathias Schäfer">
+  <!-- Mathias need to link from molily.de to his G+ profile -->
+  <a href="http://molily.de/" rel="publisher"><img src="https://secure.gravatar.com/avatar/ae86e2cc402e0dceb88e7d4fc10cbc85" width="48" height="48" alt="Mathias Schäfer">
    <span class="name">Mathias</span> Schäfer</a>
 
   <a href="http://miller.li/" rel="author"><img src="https://secure.gravatar.com/avatar/d342e4ef045c54a6a6f41d070d8a0406" width="48" height="48" alt="Paul Miller">
