--- a/index.html
+++ b/index.html
@@ -56,7 +56,7 @@ Chaplin is an architecture for JavaScript applications using the <a href="http:/
   <h2>Why Chaplin</h2>
   <div class="download-block">
     <div class="dl-button dummy">More than Backbone</div>
-    <p>Backbone is very good at what it does (simple MVC library), but just library is not enough for single-page apps. For example, there is no good memory management solution in Backbone.</p>
+    <p>Backbone is very good at what it does (simple MVC library), but a library alone is not enough for building single-page apps. For example, there is no good memory management solution in Backbone.</p>
     <p>Chaplin addresses these limitations by providing a lightweight but flexible structure which leverages well-proven design patterns and best practises.</p>
   </div>
 
