--- a/index.html
+++ b/index.html
@@ -33,17 +33,17 @@ Chaplin is an architecture for JavaScript applications using the <a href="http:/
 
   <div class="download-block first">
     <a class="dl-button secondary" href="https://github.com/paulmillr/brunch-with-chaplin">Brunch with Chaplin</a>
-    <p>uses <a href="http://brunch.io">Brunch</a> as builder which allows ultra-simple workflow. It incorporates <a href="http://html5boilerplate.com/">HTML5 Boilerplate</a> and <a href="http://learnboost.github.io/stylus/">stylus</a> / <a href="http://handlebarsjs.com/">handlebars</a></p>
+    <p>Uses <a href="http://brunch.io">Brunch</a> as builder which allows ultra-simple workflow. It incorporates <a href="http://html5boilerplate.com/">H5BP</a> and <a href="http://coffeescript.org">CoffeeScript</a> / <a href="http://learnboost.github.io/stylus/">stylus</a> / <a href="http://handlebarsjs.com/">handlebars</a>. [Plain JavaScript version](https://github.com/paulmillr/brunch-with-chaplin-js) is also available.</p>
   </div>
 
   <div class="download-block">
     <a class="dl-button secondary" href="https://github.com/chaplinjs/chaplin-boilerplate/archive/master.zip">Chaplin boilerplate</a>
-    <p>“hello world” example project using Chaplin</p>
+    <p>Simple “Hello world” example project using Chaplin</p>
   </div>
 
   <div class="download-block">
     <a class="dl-button secondary" href="https://github.com/chaplinjs/chaplin-boilerplate-plain/archive/master.zip">Chaplin boilerplate js</a>
-    <p>variant of the previous boilerplate for those preferring JavaScript over CoffeeScript</p>
+    <p>Variant of the previous boilerplate </p>
   </div>
 
   <div class="download-block">
