--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@ Chaplin is an architecture for JavaScript applications using the <a href="http:/
 
   <div class="download-block first">
     <a class="dl-button secondary" href="https://github.com/paulmillr/brunch-with-chaplin">Brunch with Chaplin</a>
-    <p>Uses <a href="http://brunch.io">Brunch</a> as builder which allows ultra-simple workflow. It incorporates <a href="http://html5boilerplate.com/">H5BP</a> and <a href="http://coffeescript.org">CoffeeScript</a> / <a href="http://learnboost.github.io/stylus/">stylus</a> / <a href="http://handlebarsjs.com/">handlebars</a>. [Plain JavaScript version](https://github.com/paulmillr/brunch-with-chaplin-js) is also available.</p>
+    <p>Uses <a href="http://brunch.io">Brunch</a> as builder which allows ultra-simple workflow. It incorporates <a href="http://html5boilerplate.com/">H5BP</a> and <a href="http://coffeescript.org">CoffeeScript</a> / <a href="http://learnboost.github.io/stylus/">stylus</a> / <a href="http://handlebarsjs.com/">handlebars</a>. <a href="https://github.com/paulmillr/brunch-with-chaplin-js">Plain JavaScript version</a> is also available.</p>
   </div>
 
   <div class="download-block">
