--- a/examples.html
+++ b/examples.html
@@ -59,7 +59,7 @@ production:
     link: 'http://www.dogkr.com'
     shot: 'http://cdn.dogkr.com/static/images/home_shot.jpg'
     desc: '[!NAME](!LINK) is an online logger to record all your beloved dogs’ life moments, even tiny instants became timeless memories.'
-  arena
+  arena:
     name: 'Arena'
     link: 'http://are.na'
     shot: 'https://s3.amazonaws.com/arena_images/182537/original_ba0b1dabf557afc3508ecf9d1d991ad8'
