Add gss project to chaplin website examples

--- a/examples.html
+++ b/examples.html
@@ -31,6 +31,10 @@ examples:
     name: 'Symfony-Chaplin demo'
     link: 'https://github.com/pulse00/symfony-chaplin-demo'
     desc: '[The app](!LINK) is used as a demo for the [Symfony](https://github.com/symfony/symfony) [usergroup vienna](http://www.meetup.com/sfugvienna/) to demonstrate a single page app using Symfony as a REST backend and chaplin as the html5 frontend.'
+  gss:
+    name: 'Starter application'
+    link: 'https://github.com/ButuzGOL/gss'
+    desc: '[The starter app](!LINK) can give you some ideas how to build app structure with first steps (workflow, auth, tests, etc.).'
 
 production:
   delicious:
