--- a/support.html
+++ b/support.html
@@ -21,11 +21,11 @@ layout: base
 <p>
 One of the creators of Chaplin, is offering commercial support and training for Chaplin and Backbone-based JavaScript applications. 9elements is a software and design agency located in Berlin and Bochum, Germany. Send us a mail for more information: <a href="mailto:contact@9elements.com">contact@9elements.com</a>.</p>
 
-<a href="http://paulmillr.com/" rel="author"><img src="https://secure.gravatar.com/avatar/d342e4ef045c54a6a6f41d070d8a0406?s=48" width="48" height="48" alt="Paul Miller"></a>
+<a href="http://hellyeah.is/"><img src="http://hellyeah.is/images/logo.png" width="48" height="48" alt="Hell Yeah"></a>
 
-<span class="author-avatar-text"><a href="http://paulmillr.com/" rel="author"><span class="name">Paul</span> Miller</a> — Worldwide</span>
+<span class="author-avatar-text"><a href="http://hellyeah.is/"><span class="name">Hell</span> Yeah LLC</a> — Worldwide</span>
 
-<p>Chaplin &amp; Brunch maintainer is offering <a href="http://paulmillr.com/hire.html">consulting &amp; training</a> for all Backbone-related stuff. Contact him: <a href="mailto:&#112;&#97;&#117;&#108;&#43;&#99;&#111;&#110;&#115;&#117;&#108;&#116;&#105;&#110;&#103;&#64;&#112;&#97;&#117;&#108;&#109;&#105;&#108;&#108;&#114;&#46;&#99;&#111;&#109;">&#112;&#97;&#117;&#108;&#43;&#99;&#111;&#110;&#115;&#117;&#108;&#116;&#105;&#110;&#103;&#64;&#112;&#97;&#117;&#108;&#109;&#105;&#108;&#108;&#114;&#46;&#99;&#111;&#109;</a>.</p>
+<p>Another Chaplin creator &amp; Brunch maintainer is offering consulting &amp; training for all web application-related stuff. Don't hesitate, drop a line: <a href="mailto:&#x69;&#x6E;&#x66;&#x6F;&#x40;&#x68;&#x65;&#x6C;&#x6C;&#x79;&#x65;&#x61;&#x68;&#x2E;&#x69;&#x73;">&#x69;&#x6E;&#x66;&#x6F;&#x40;&#x68;&#x65;&#x6C;&#x6C;&#x79;&#x65;&#x61;&#x68;&#x2E;&#x69;&#x73;</a>.</p>
 
 <a href="http://www.concordusapps.com/"><img src="https://1.gravatar.com/avatar/fffbb89d88b7b257508ac596b7be3c23?s=48" width="48" height="48" alt="Concordus apps"></a>
 
