add pentagon example

--- a/examples.html
+++ b/examples.html
@@ -68,7 +68,11 @@ production:
     link: 'http://are.na'
     shot: 'https://s3.amazonaws.com/arena_images/182537/original_ba0b1dabf557afc3508ecf9d1d991ad8'
     desc: 'On [!NAME](!LINK), you can collect and recombine blocks of information – texts, images, links, and files – by yourself or with other users. People use [!NAME](!LINK) to collaborate on projects, save bookmarks from the web, and even as a lightweight CMS. Its front-end is built entirely on Chaplin.'
-
+  pentagon:
+    name: 'Pentagon'
+    link: 'http://www.getpentagon.com.au'
+    shot: 'images/screenshots/pentagon-12-2014.png'
+    desc: '[!NAME](!LINK)’s powerful price tracking technology works with your products to identify the best pricing opportunities on the market – giving you the advantage and keeping your business ahead of the competition. You'll benefit from reduced costs, greater market share, boosted turnover, increased profits and lower supply prices. Pentagon’s webapp is based on Chaplin. We love it! You should try it!'
 
 ---
 
