--- a/examples.html
+++ b/examples.html
@@ -72,7 +72,7 @@ production:
     name: 'Pentagon'
     link: 'http://www.getpentagon.com.au'
     shot: 'images/screenshots/pentagon-12-2014.png'
-    desc: '[!NAME](!LINK)’s powerful price tracking technology works with your products to identify the best pricing opportunities on the market – giving you the advantage and keeping your business ahead of the competition. You'll benefit from reduced costs, greater market share, boosted turnover, increased profits and lower supply prices. Pentagon’s webapp is based on Chaplin. We love it! You should try it!'
+    desc: '[!NAME](!LINK)’s powerful price tracking technology works with your products to identify the best pricing opportunities on the market – giving you the advantage and keeping your business ahead of the competition. You’ll benefit from reduced costs, greater market share, boosted turnover, increased profits and lower supply prices. Pentagon’s webapp is based on Chaplin. We love it! You should try it!'
 
 ---
 
