--- a/examples.html
+++ b/examples.html
@@ -35,6 +35,10 @@ examples:
     name: 'Starter application'
     link: 'https://github.com/ButuzGOL/gss'
     desc: '[The starter app](!LINK) can give you some ideas how to build app structure with first steps (workflow, auth, tests, etc.).'
+  turbosnake:
+    name: 'Starter app for Turbogears2 and ChaplinJS'
+    link: 'https://github.com/nesforge/turbosnake'
+    desc: 'Turbosnake is the ready-to-use fullstack envinronment for python programmers with an example calendar application on board.'
 
 production:
   delicious:
